# Xcomm

./: AUTHORS  CMakeLists.txt  LICENSE  README-ZH-CN.md  README-en.md  README.md  cross-compile-harmony.sh
docs/: xcomm-dumper-module.md  xcomm-melsec-module.md  xcomm-serial-module.md  xcomm-tcp-module.md
examples/: CMakeLists.txt  example-melsec-1c-cli.c  example-serial-cli.c  example-serial-srv.c  example-sync-tcp-cli.c  example-sync-tcp-srv.c
include/: flink-types.h  xcomm.h  xlink.h
include/xcomm/: xcomm-dumper-module.h  xcomm-dumper.h  xcomm-melsec-1c-module.h  xcomm-melsec-3c-module.h  xcomm-melsec-module.h  xcomm-serial-module.h  xcomm-serial.h  xcomm-sync-tcp-module.h  xcomm-tcp-module.h  xcomm-types.h  xcomm-utils-module.h
src/: flink-logger.h  xcomm-base64.c  xcomm-base64.h  xcomm-bswap.c  xcomm-bswap.h  xcomm-channel.c  xcomm-channel.h  xcomm-dumper.c  xcomm-engine.c  xcomm-engine.h  xcomm-event-io.c  xcomm-event-io.h  xcomm-event-loop.c  xcomm-event-loop.h  xcomm-event-routine.c  xcomm-event-routine.h  xcomm-event-timer.c  xcomm-event-timer.h  xcomm-event.c  xcomm-event.h  xcomm-eventloop.c  xcomm-eventloop.h  xcomm-heap.c  xcomm-heap.h  xcomm-io.c  xcomm-io.h  xcomm-list.c  xcomm-list.h  xcomm-loader.c  xcomm-loader.h  xcomm-logger.c  xcomm-logger.h  xcomm-poller.c  xcomm-poller.h  xcomm-queue.c  xcomm-queue.h  xcomm-rbtree.c  xcomm-rbtree.h  xcomm-ringbuffer.c  xcomm-ringbuffer.h  (+37 more)
src/deprecated/: c11-threads.h
src/melsec/: melsec-3e.h
src/modules/dumper/: xcomm-dumper-module.c  xcomm-dumper.c  xcomm-dumper.h
src/modules/melsec/: xcomm-melsec-1c.c  xcomm-melsec-1c.h  xcomm-melsec-3e.c  xcomm-melsec-3e.h  xcomm-melsec-common.c  xcomm-melsec-common.h  xcomm-melsec-module.c
src/modules/mitsubishi/melsec/: internal-melsec-1c.h  xcomm-melsec-1c-module.c  xcomm-melsec-1c.c  xcomm-melsec-1c.h  xcomm-melsec-1e.c  xcomm-melsec-3c-module.c  xcomm-melsec-common.c
src/modules/serial/: serial-module.c  xcomm-serial-module.c  xcomm-serial.c  xcomm-serial.h
src/modules/tcp/: internal-sync-tcp.c  internal-sync-tcp.h  xcomm-async-tcp.c  xcomm-async-tcp.h  xcomm-sync-tcp-module.c  xcomm-sync-tcp.c  xcomm-sync-tcp.h  xcomm-tcp-module.c
src/modules/utils/: xcomm-utils-module.c  xcomm-utils.c  xcomm-utils.h
src/platform/: platform-event.h  platform-info.h  platform-io.h  platform-loader.h  platform-poller.h  platform-process.h  platform-serial.h  platform-socket.h  platform-thrd.h  platform-time.h  platform-types.h  platform-uart.h  platform-utils.h
src/platform/unix/: platform-event.c  platform-info.c  platform-io.c  platform-loader.c  platform-poller.c  platform-process.c  platform-serial.c  platform-socket.c  platform-thrd.c  platform-time.c  platform-uart.c  platform-utils.c
src/platform/win/: platform-event.c  platform-info.c  platform-io.c  platform-loader.c  platform-poller.c  platform-process.c  platform-socket.c  platform-thrd.c  platform-time.c  platform-uart.c  platform-utils.c
src/tests/: runner.c
tests/: CMakeLists.txt  test-base64.c  test-bswap.c  test-byteorder-swap.c  test-dlist.c  test-heap.c  test-list.c  test-logger.c  test-rbtree.c  test-ringbuffer.c  test-rwlock.c  test-sha1.c  test-sha256.c  test-thrdpool.c  test-timer.c  test-timers.c  test-varint.c  test-wg.c
